--- a/java/pom.xml
+++ b/java/pom.xml
@@ -14,5 +14,11 @@
       <version>4.7</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>cglib</groupId>
+      <artifactId>cglib</artifactId>
+      <version>2.2</version>
+    </dependency>
   </dependencies>
 </project>
